[package]
name = "net-piercer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
bytes = { version = "1.1" }
bincode = "1.3"
uuid = { version = "0.8", features = [ "v4" ] }
toml = "0.5"
anyhow = "1.0"